--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -28,7 +28,10 @@
 
     &__middle {
         margin-top: 57px;
-        margin-bottom: 20px;
+
+        .mt-20 {
+            margin-top: 20px;
+        }
     }
 
     &__nav {
@@ -70,19 +73,23 @@
         border: 1px solid $white;
     }
 
-    .who-creted {
-        color: $text-color-white;
-        font-weight: 100;
-        margin-bottom: 8px;
-        display: block;
+    &__right-col {
+        text-align: right;
+
+        .who-created {
+            color: $text-color-white;
+            font-weight: 100;
+            margin-bottom: 8px;
+            display: block;
+        }
     }
 }
 
 .call-us {
     color: $text-color-white;
     margin-bottom: 94px;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: $base-font-size;
+    line-height: $base-line-height;
 
     &__meneger {
         font-weight: 100;
@@ -96,8 +103,8 @@
 
     &__title {
         font-weight: 700;
-        font-size: 36px;
-        line-height: 43px;
+        font-size: $font-size-h2;
+        line-height: $line-height-h2;
         margin-bottom: 8px;
     }
 
@@ -106,8 +113,8 @@
             margin-bottom: 20px;
 
             &__number {
-                font-size: 60px;
-                line-height: 72px;
+                font-size: $font-size-h1;
+                line-height: $line-height-h1;
             }
 
             .arrow-down {
@@ -132,10 +139,204 @@
     }
 }
 
-@media screen and (max-width: 1199.8px) {}
+@media screen and (max-width: 1199.8px) {
+    .footer {
+        padding: 70px 0 38px;
+        font-size: 12px;
+        line-height: 24px;
 
-@media screen and (max-width: 991.8px) {}
+        &__logo {
+            width: 120px;
+        }
 
-@media screen and (max-width: 767.8px) {}
+        &__middle {
+            margin-top: 26px;
+            margin-bottom: 20px;
+        }
+
+        &__nav {
+            margin-top: 0;
+        }
+
+    }
+
+    .call-us {
+        margin-bottom: 80px;
+
+        &__img {
+            @include circle-image(120px, 120px);
+            margin-bottom: 30px;
+        }
+
+        &__title {
+            font-size: $font-size-h2 - 6px;
+            line-height: $line-height-h2 - 6px;
+            margin-bottom: 12px;
+        }
+
+        &__info {
+            .phone {
+                margin: 0 0 43px;
+
+                &__number {
+                    font-size: $font-size-h1 - 10px;
+                    line-height: $line-height-h1 - 10px;
+                }
+
+                .arrow-down {
+                    top: -18px;
+                    width: 32px
+                }
+            }
+        }
+
+        &__form {
+            margin-top: 18px;
+
+            .btn-red {
+                min-width: 225px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 991.8px) {
+    .call-us {
+        &__img {
+            @include circle-image(150px, 150px);
+            margin-bottom: 23px;
+        }
+
+        &__title {
+            font-size: $font-size-h3;
+            line-height: $line-height-h3;
+        }
+
+        &__info {
+            .phone {
+                &__number {
+                    font-size: $font-size-h2;
+                    line-height: $line-height-h2;
+                }
+
+                .arrow-down {
+                    top: -10px;
+                    width: 18px;
+                    margin-left: 16px;
+                }
+            }
+        }
+
+        &__form {
+            margin-top: 18px;
+
+            .btn-red {
+                min-width: 210px;
+            }
+        }
+    }
+
+    .footer {
+        font-size: 14px;
+        line-height: 26px;
+
+        &__logo {
+            width: 91px;
+            display: inline-flex;
+
+            +p {
+                display: inline-block;
+                width: 174px;
+                font-size: 12px;
+                line-height: 14px;
+                margin-left: 20px;
+                margin-bottom: 0;
+            }
+        }
+
+        &__middle {
+            margin-top: 26px;
+            margin-bottom: 20px;
+
+            .mt-20 {
+                margin-top: 0;
+            }
+        }
+
+        &__nav {
+            margin: 43px 0 40px;
+        }
+    }
+}
+
+@media screen and (max-width: 767.8px) {
+    .footer {
+        padding: 22px 0 32px;
+
+        &__middle {
+            margin-top: 26px;
+            margin-bottom: 0;
+
+            .social-networks {
+                display: flex;
+                justify-content: center;
+                margin: 0 0 20px;
+            }
+
+            >.col-lg-3 {
+                display: flex;
+                justify-content: center;
+            }
+        }
+
+        &__nav {
+            margin: 42px 0 20px;
+            display: block;
+            text-align: center;
+        }
+
+        &__menu {
+            li {
+                >a {
+                    position: relative;
+                }
+            }
+
+            .counter {
+                position: absolute;
+                top: 0;
+                right: 0;
+                @include transform(translateX(140%));
+            }
+        }
+
+        &__right-col {
+            text-align: center;
+            margin-top: 30px;
+        }
+    }
+
+    .call-us {
+        margin-bottom: 42px;
+
+        &__meneger {
+            display: none;
+        }
+
+        &__title {
+            text-align: center;
+        }
+
+        &__info {
+            text-align: center;
+        }
+
+        &__form {
+            .btn-red {
+                min-width: 200px;
+            }
+        }
+    }
+}
 
 @media screen and (max-width: 575.8px) {}
