--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -122,7 +122,6 @@ body {
     background-color: $bg-dark;
     color: $text-color-white;
     box-shadow: 0px 70px 100px $shadow-dark;
-    padding: 37px 95px 97px;
 }
 
 .box-shadow {
@@ -259,7 +258,58 @@ body {
     }
 }
 
-@media only screen and (max-width: 1999.8px) {
+@media only screen and (max-width: 1199.8px) {
+    body {
+        line-height: $base-line-height - 3px;
+        font-size: $base-font-size - 2px !important;
+    }
+
+    .title-section,
+    .title-white {
+        font-size: $font-size-h1 - 12px;
+        line-height: $font-size-h1 - 12px;
+    }
+
+    .btn-red {
+        height: 55px;
+        width: 270px;
+        font-size: $base-font-size;
+        line-height: $base-line-height;
+    }
+
+    .spinner {
+        width: 220px;
+
+        input {
+            height: 45px;
+        }
+
+        &__btn {
+            height: 45px;
+            width: 45px;
+        }
+    }
+
+    .input-bark,
+    .input-light {
+        height: 45px;
+    }
+
+    .title-text-border {
+        font-size: 120px;
+        line-height: 145px;
+        margin-bottom: -32px;
+    }
+
+    .nav-pills {
+        .nav-link {
+            height: 45px;
+            padding-left: 42px;
+        }
+    }
+}
+
+@media only screen and (max-width: 991.8px) {
     body {
         line-height: $base-line-height - 5px;
         font-size: $base-font-size - 4px !important;
@@ -271,10 +321,36 @@ body {
         line-height: $font-size-h2;
     }
 
-    .btn-red {
-        height: 55px;
-        width: 270px;
-        font-size: $base-font-size;
-        line-height: $base-line-height;
+    .spinner {
+        width: 180px;
     }
+
+    .title-text-border {
+        font-size: 72px;
+        line-height: 86px;
+        margin-bottom: -17px;
+    }
+
+    .nav-pills {
+        .nav-link {
+            height: 37px;
+            padding-left: 26px;
+        }
+    }
+
+    .social-networks {
+        >li {
+            >a {
+                width: 23px;
+            }
+        }
+    }
+
+}
+
+@media only screen and (max-width: 767.8px) {
+    .spinner {
+        width: 48%;
+    }
+
 }
